flask-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: { ? { .Values.app.name } }
  namespace: { ? { .Values.namespace } }
spec:
  type: { ? { .Values.service.type } }
  selector:
    app: { ? { .Values.app.name } }
  ports:
  - protocol: TCP
    port: { ? { .Values.service.port } }
    targetPort: { ? { .Values.service.targetPort } }
